# shannon-player

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: ATMOS_DECODING_NOTES.md  AUDIO_BACKEND_ARCHITECTURE.md  AUDIO_BACKEND_IMPLEMENTATION_PLAN.md  DEVELOPMENT.md  RELEASE_NOTES.md  WINDOWS_SPATIAL_PLAYBACK_NOTES.md
docs/design/: README.md
docs/design/香农播放器设计简报/: .thumbnail  专辑页.dc.html  搜索页.dc.html  收藏页.dc.html  曲库主界面.dc.html  歌单页.dc.html  歌手页.dc.html  歌曲页.dc.html  歌词页.dc.html  设置页.dc.html  设计Token文档.dc.html  首次启动页.dc.html
src/: App.tsx  index.css  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/album/: AlbumDetailScreen.tsx
src/components/artist/: ArtistDetailScreen.tsx  ArtistsScreen.tsx
src/components/common/: AnimatedIcon.tsx  Collage.tsx  EqBars.tsx  FilterPill.tsx  Icon.tsx  ItemContextMenu.tsx  PageTransition.tsx  PlayPauseIcon.tsx  PlaybackControlButton.tsx  SegmentedControl.tsx  TrackIndicator.tsx  VolumeSlider.tsx
src/components/favorites/: FavoritesScreen.tsx
src/components/layout/: IconRail.tsx
src/components/lyrics/: LyricsScreen.tsx
src/data/: library.ts  lyrics.ts  playlists.ts
src/hooks/: useApplyTheme.ts  useElasticScroll.ts  usePlaybackTicker.ts
src/i18n/: index.ts  messages.ts
src/lib/: amll.ts  cn.ts  coverStyle.ts  nativeChrome.ts  playlistActions.ts  time.ts
src/store/: player.ts  ui.ts
src/types/: player.ts
(+9 files in other folders)
